revert to next button

--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -308,9 +308,7 @@
     </div>
 
     
-    <div>
-        <button id="submit" value="True" class="otree-button-next btn btn-primary next-button otree-next-button">Submit Decision</button>
-    </div>
+    {% next_button %}
      
 
     <script type="text/javascript">
