--- a/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
+++ b/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
@@ -3,23 +3,22 @@
 <div class="instructions well well-lg">
 
     <h2 class="panel-sub-heading">
-        Instructions - Task PR
+        Instructions - Task S-1B-1C
     </h2>
 
     <p>
-        In this task, you are given two fixed, mutually exclusive outcomes.
-        You are then asked to decide the probabilities of these two outcomes.
-        See graph below.
+       In each decision round, there will be two probable states: State A and State B. Think of these states as the weather: it could be either sunny or cloudy. However, when you make your decision, it is uncertain which state will occur.
     </p>
 
     <p>
-        In the left-side graph, your tokens are represented on the horizontal axis and
-        Partner’s tokens on the vertical axis. Each of the two possible outcomes is represented
-        by a dot or a bubble in this graph. You must decide what the probability of each outcome is
-        in percentage (%) terms. The figure below shows a sample screenshot
-        of this task where the two fixed outcomes are
-        A = (You: 70, Partner: 10) and B = (You: 10, Partner: 80).
-    </p> </br>
+Your decision will be represented by a point on a graph like the one in the figure below. In this graph, the horizontal axis indicates Tokens paid if State A occurs, and the vertical axis indicates Tokens paid if State B occurs. The chance that each state will occur is displayed in parentheses on the corresponding axis label. In sample screen-shot, for instance, the probability of State A is 50%, and the probability of State B is 50%, as well. However, beware that these probabilities might be different in different decision rounds.
+    </p>
+
+    <p>
+    The position of a point on this graph represents a lottery. For example, the point on location (40, 27) indicates that if State A is realized, the lottery pays 40 tokens; and if State B is realized, the lottery pays 27 tokens. <i style="color: blue"> your lottery  will be depicted by a blue square, and </i> and <i style="color: orange"> Partner’s lottery by an orange circle </i>.
+    </p>
+
+    </br>
 
     <p>
         <img alt="Sample Screenshot - Task PR"
@@ -29,10 +28,6 @@
     </p> </br>
 
     <p>
-        On the right side of the screen you have a slider tool where you can chose the chance of Outcome A,
-        from 0% to 100%. Drag the slider onto your chosen percentage.
-        For example: If you choose 40, outcome A will occur with a 40% chance and outcome B with a 60% chance.
-        If you choose 100, outcome A will occur for sure. If you choose 0, outcome B will occur for sure.
     </p>
 
     <p>
