--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -314,7 +314,7 @@
     <script type="text/javascript">
     $(document).ready(function() {
         $('#arrive_time').val((new Date()).toISOString())
-        $('.next-button').click(function() {
+        $('temp-string').click(function() {
             if (somethingChanged === false) {
                 alert('Please make a selection.')
                 return false
