--- a/templates/RiskAndFairness_oTree/Results.html
+++ b/templates/RiskAndFairness_oTree/Results.html
@@ -16,25 +16,66 @@
 
 {% block content %}
 {% formfield player.time_Results with label=None %}
+    <h5>Your role for the experiment was {{ role | json }}.</h5>
+    <h5>The paying round was {{ mode | json }} - decision {{ counter | json }}.
     <hr>
+    {% if mode == 'probability' %}
 	<table style="width:50%">
 		<tr>
-			<th>Paid Task</th>
-			<td>{{ mode }}</td>
+            {% if role == 'decider' %}
+			<th>Your decision</th>
+            {% else %}
+            <th>Decider's decision</th>
+            {% endif %}
+			<td>{{ dec_a | json}}% for A, {{ dec_b | json}}% for B</td>
 		</tr>
 		<tr>
-			<th>Decision</th>
-			<td>{{ decision }}</td>
+			<th>Realized outcome</th>
+			<td>{{ outcome | json }}</td>
 		</tr>
 		<tr>
-			<th>Outcome</th>
-			<td>{{ player.outcome }}</td>
-		</tr>
-		<tr>
-			<th>Payoff</th>
-			<td>{{ player.payoff }} </td>
+			<th>Your earnings</th>
+			<td>{{ payoff | json }} </td>
 		</tr>
     </table>
+    
+    {% elif mode == 'det_giv' %}
+    <table style="width:50%">
+        <tr>
+            {% if role == 'decider' %}
+            <th>Your decision</th>
+            {% else %}
+            <th>Decider's decision</th>
+            {% endif %}
+            <td>{{ dec_a | json }} tokens</td>
+        </tr>
+        <tr>
+            <th>Your earnings</th>
+            <td>{{ payoff | json }} </td>
+        </tr>
+    </table>
+    
+    {% else %}
+    <table style="width:50%">
+        <tr>
+            {% if role == 'decider' %}
+            <th>Your decision</th>
+            {% else %}
+            <th>Decider's decision</th>
+            {% endif %}
+            <td>{{ dec_a | json }} tokens if A, {{ dec_b | json }} tokens if B</td>
+        </tr>
+        <tr>
+            <th>Realized outcome</th>
+            <td>{{ outcome | json }}</td>
+        </tr>
+        <tr>
+            <th>Your earnings</th>
+            <td>{{ payoff | json }} </td>
+        </tr>
+    </table>
+    {% endif %}
+    
     <hr>
     {% next_button %}
 {% endblock %}
