pushing changes to views, graph, results, and models

--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -5,11 +5,11 @@
     {% if mode == 'probability' %}
         <h1 style="color:#BFBFBF">PR - Decision {{ counter }}</h1>
     {% elif mode == 'sec_1bl_1ch' %}
-        <h1 style="color:#BFBFBF">S-1B-1Ch - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">S-1B-1C - Decision {{ counter }}</h1>
     {% elif mode == 'sec_2bl_1ch' %}
-        <h1 style="color:#BFBFBF">S-2B-1Ch - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">S-2B-1C - Decision {{ counter }}</h1>
     {% elif mode == 'sec_1bl_2ch' %}
-        <h1 style="color:#BFBFBF">S-1B-2Ch - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">S-1B-2C - Decision {{ counter }}</h1>
     {% elif mode == 'sec_ownrisk' %}
         <h1 style="color:#BFBFBF">S-OwnRisk - Decision {{ counter }}</h1>
     {% elif mode == 'sec_ownrisk_fixedother' %}
