--- a/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
+++ b/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
@@ -24,9 +24,10 @@ Your decision will be represented by a point on a graph like the one in the figu
     {% endif %}
 
     {% if sec2 == "1ch" %}
+    {% endif %}
 <p>
     For this next task, both you and your partner
-    {% if sec1 == 1bl %} share the same
+    {% if sec1 == 1bl %} {% endif %} share the same
     fortune: in each state, the amount of tokens both receive is the same. See for example, Figure 2. Here states A and B each occur with a 50% chance. Also, since both participants face the exact same fate, Decider’s blue square and Partner’s orange circle are always located on the same spot. In Figure 2, they both are on location (40, 27). This means, if State A happens, you and your Partner will both get 40 tokens and if State B occurs instead, you both get 27 tokens.
 
 For Task 3, Decider and Partner have opposite fortunes. What Decider would get in State A equals what Partner would receive in State B. Similarly, what Decider would get in State B is what Partner would get in State A.
