--- a/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
+++ b/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
@@ -10,7 +10,7 @@
             PROBABILITY INSTRUCTIONS
         </p>
 
-    {% else if mode == 'sec_1bl_1ch' or mode == 'sec_1bl_2ch' or mode == 'sec_2bl_1ch' or mode == 'sec_2bl_2ch' or mode == 'sec_ownrisk' or mode == 'sec_ownrisk_fixedother' or mode == 'sec_otherrisk_ownfixed' %}
+    {% elif mode == 'sec_1bl_1ch' or mode == 'sec_1bl_2ch' or mode == 'sec_2bl_1ch' or mode == 'sec_2bl_2ch' or mode == 'sec_ownrisk' or mode == 'sec_ownrisk_fixedother' or mode == 'sec_otherrisk_ownfixed' %}
         <h2 class="panel-sub-heading">
             {% if mode == 'sec_1bl_1ch'%}
                 Instructions for S-1B-1C
@@ -42,18 +42,18 @@
             <p>
                 1BL 1BL 1BL ---- Instructions for 1 budget line only. Will be followed by either: instructions for 1 choice, or instructions for 2 choices.
             </p>
-        {% else if sec1 == '2bl' %}
+        {% elif sec1 == '2bl' %}
             <p>
                 2BL 2BL 2BL ---- Instructions for 1 budget line only. Will be followed by either: instructions for 1 choice, or instructions for 2 choices.
             </p>
         {% endif %}
 
         <!-- Choices -->
-        {% if sec2 == '1ch'}
+        {% if sec2 == '1ch' %}
             <p>
                 1CH 1CH 1CH ---- Instructions for 1 choice only. Will follow either: instructions for 1 budget line, or instructions for 2 budget lines.
             </p>
-        {% else if sec2 == '2ch'}
+        {% elif sec2 == '2ch'}
             <p>
                 2CH 2CH 2CH ---- Instructions for 2 choices only. Will follow either: instructions for 1 budget line, or instructions for 2 budget lines.
             </p>
@@ -67,14 +67,14 @@
             <p>
                 OWNRISK INSTRUCTIONS
             </p>
-        {% else if mode == 'sec_ownrisk_fixedother' %}
+        {% elif mode == 'sec_ownrisk_fixedother' %}
             <h2 class="panel-sub-heading">
                 Instructions for S-OwnRisk-FixedOther
             </h2>
             <p>
                 OWNRISK FIXEDOTHER INSTRUCTIONS
             </p>
-        {% else if mode == 'sec_otherrisk_ownfixed' %}
+        {% elif mode == 'sec_otherrisk_ownfixed' %}
             <h2 class="panel-sub-heading">
                 Instructions for S-OtherRisk-OwnFixed
             </h2>
@@ -83,7 +83,7 @@
             </p>
         {% endif %}
 
-    {% else if mode == 'det_giv %}
+    {% elif mode == 'det_giv' %}
         <h2 class="panel-sub-heading">
                 Instructions for DG
         <p>
