--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -2,15 +2,8 @@
 
 <div class="instructions well well-lg">
 
-    {% if mode == 'probability' %}
-        <h2 class="panel-sub-heading">
-            Instructions for Probability
-        </h2>
-        <p>
-            PROBABILITY INSTRUCTIONS
-        </p>
 
-    {% else if mode == 'sec_1bl_1ch' or mode == 'sec_1bl_2ch' or mode == 'sec_2bl_1ch' or mode == 'sec_2bl_2ch' or mode == 'sec_ownrisk' or mode == 'sec_ownrisk_fixedother' or mode == 'sec_otherrisk_ownfixed' %}
+    {% if mode == 'sec_1bl_1ch' or mode == 'sec_1bl_2ch' or mode == 'sec_2bl_1ch' or mode == 'sec_2bl_2ch' or mode == 'sec_ownrisk' or mode == 'sec_ownrisk_fixedother' or mode == 'sec_otherrisk_ownfixed' %}
         <h2 class="panel-sub-heading">
             {% if mode == 'sec_1bl_1ch'%}
                 Instructions for S-1B-1C
@@ -42,7 +35,7 @@
             <p>
                 1BL 1BL 1BL ---- Instructions for 1 budget line only. Will be followed by either: instructions for 1 choice, or instructions for 2 choices.
             </p>
-        {% else if sec1 == '2bl' %}
+        {% elif sec1 == '2bl' %}
             <p>
                 2BL 2BL 2BL ---- Instructions for 1 budget line only. Will be followed by either: instructions for 1 choice, or instructions for 2 choices.
             </p>
@@ -53,7 +46,7 @@
             <p>
                 1CH 1CH 1CH ---- Instructions for 1 choice only. Will follow either: instructions for 1 budget line, or instructions for 2 budget lines.
             </p>
-        {% else if sec2 == '2ch'}
+        {% elif sec2 == '2ch'}
             <p>
                 2CH 2CH 2CH ---- Instructions for 2 choices only. Will follow either: instructions for 1 budget line, or instructions for 2 budget lines.
             </p>
@@ -67,14 +60,14 @@
             <p>
                 OWNRISK INSTRUCTIONS
             </p>
-        {% else if mode == 'sec_ownrisk_fixedother' %}
+        {% elif mode == 'sec_ownrisk_fixedother' %}
             <h2 class="panel-sub-heading">
                 Instructions for S-OwnRisk-FixedOther
             </h2>
             <p>
                 OWNRISK FIXEDOTHER INSTRUCTIONS
             </p>
-        {% else if mode == 'sec_otherrisk_ownfixed' %}
+        {% elif mode == 'sec_otherrisk_ownfixed' %}
             <h2 class="panel-sub-heading">
                 Instructions for S-OtherRisk-OwnFixed
             </h2>
@@ -83,7 +76,7 @@
             </p>
         {% endif %}
 
-    {% else if mode == 'det_giv %}
+    {% elif mode == 'det_giv %}
         <h2 class="panel-sub-heading">
                 Instructions for DG
         <p>
