commit beofre merge conflict

--- a/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
+++ b/templates/RiskAndFairness_oTree/sec_1bl_1ch.html
@@ -53,7 +53,7 @@
             <p>
                 1CH 1CH 1CH ---- Instructions for 1 choice only. Will follow either: instructions for 1 budget line, or instructions for 2 budget lines.
             </p>
-        {% elif sec2 == '2ch'}
+        {% elif sec2 == '2ch' %}
             <p>
                 2CH 2CH 2CH ---- Instructions for 2 choices only. Will follow either: instructions for 1 budget line, or instructions for 2 budget lines.
             </p>
