--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -7,13 +7,19 @@
 
         <h2 class="panel-sub-heading">
             {% if mode == 'sec_1bl_1ch'%}
-                Instructions for S-1B-1C
+                Instructions - Task S-1B-1C
             {% elif mode == 'sec_1bl_2ch'%}
-                Instructions for S-1B-2C
+                Instructions - Task S-1B-2C
             {% elif mode == 'sec_2bl_1ch'%}
-                Instructions for S-2B-1C
+                Instructions - Task S-2B-1C
             {% elif mode == 'sec_2bl_2ch'%}
-                Instructions for S-2B-2C
+                Instructions - Task S-2B-2C
+            {% elif mode == 'sec_ownrisk' %}
+                Instructions - Task Sec-OwnRisk
+            {% elif mode == 'sec_ownrisk_fixedother' %}
+                Instrucitons - Task Sec-OwnRisk-FixedOther
+            {% elif mode == 'sec_otherrisk_ownfixed' %}
+                Instructions - Task Sec-OtherRisk-OwnFixed
             {% endif %}
         </h2>
 
@@ -55,23 +61,14 @@
 
         <!-- other security modes -->
         {% if mode == 'sec_ownrisk' %}
-            <h2 class="panel-sub-heading">
-                Instructions for S-OwnRisk
-            </h2>
             <p>
                 OWNRISK INSTRUCTIONS
             </p>
         {% elif mode == 'sec_ownrisk_fixedother' %}
-            <h2 class="panel-sub-heading">
-                Instructions for S-OwnRisk-FixedOther
-            </h2>
             <p>
                 OWNRISK FIXEDOTHER INSTRUCTIONS
             </p>
         {% elif mode == 'sec_otherrisk_ownfixed' %}
-            <h2 class="panel-sub-heading">
-                Instructions for S-OtherRisk-OwnFixed
-            </h2>
             <p>
                 OTHERRISK OWNFIXED INSTRUCTIONS
             </p>
