testing problem with png

--- a/templates/RiskAndFairness_oTree/det_giv.html
+++ b/templates/RiskAndFairness_oTree/det_giv.html
@@ -10,6 +10,8 @@
         Content content content.
     </p>
 
+    <img src="{% static "det_giv.png" %}" width="500" align="center"/>
+
 
 </div>
 
