--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -46,7 +46,7 @@
             At the beginning of each decision screen, the square and the circle will appear a random position. To make a choice drag the square or the circle to your chosen location. The other shape will follow.
             </p>
 
-        {% if mode == 'sec_2bl_1ch' %}
+        {% elif mode == 'sec_2bl_1ch' %}
 
             BLAH
 
@@ -115,5 +115,15 @@ Please beware that the probabilities of each State might vary across different d
 {# IMAGES #}
             {% if mode == 'sec_1bl_1ch' %}
                 <img src="{% static "sec_1bl_1ch.png" %}" width="500" align="center"/>
+            {% elif mode == 'sec_1bl_2ch' %}
+                <img src="{% static "sec_1bl_2ch.png" %}" width="500" align="center"/>
+            {% elif mode == 'sec_2bl_1ch' %}
+                <img src="{% static "sec_2bl_1ch.png" %}" width="500" align="center"/>
+            {% elif mode == 'sec_ownrisk' %}
+                <img src="{% static "sec_ownrisk.png" %}" width="500" align="center"/>
+            {% elif mode == 'sec_ownrisk_fixedother' %}
+                <img src="{% static "sec_ownrisk_fixedother.png" %}" width="500" align="center"/>
+            {% elif mode == 'sec_otherrisk_ownfixed' %}
+                <img src="{% static "sec_otherrisk_ownfixed.png" %}" width="500" align="center"/>
             {% endif %}
 
