--- a/templates/RiskAndFairness_oTree/det_giv.html
+++ b/templates/RiskAndFairness_oTree/det_giv.html
@@ -7,7 +7,19 @@
     </h2>
 
     <p>
-        Content content content.
+        In this task, you will be given a set of possible Token combinations for you and your Partner. You are asked to choose one combination and submit your decision.
+    </p>
+
+    <p>
+        The figure below shows an example of this kind of task. You will see a graph on a white background representing token allocations. In every round of this task, your tokens will be indicated on the horizontal axis and your Partner’s tokens on the vertical axis. The same information is also displayed in the table on the right of the screen. Throughout this session, your tokens will be represented in blue and Partner’s tokens in orange.
+    </p>
+
+    <p>
+        For example, the point (3.9, 30.8) depicted in the graph by a red square indicates that you will receive 3.9 tokens and your counterpart will receive 30.8 tokens. This is also indicated in the label “You: 3.9, Partner: 30.8” and in the small table next to the figure.
+    </p>
+
+    <p>
+        At the beginning of each task, the red square will appear at a random location. To make a choice drag the red square with the mouse to any position within the gray line. Only combinations along this line are feasible, valid choices. The computer will not let you chose any point but those. You can try as many combinations as you want before you make your decision. Once you have the red square at the intended position, press the submit decision button and continue to the next round. Please think your decisions carefully.
     </p>
 
     <img src="{% static "det_giv.png" %}" width="500" align="center"/>
