--- a/templates/RiskAndFairness_oTree/Probability.html
+++ b/templates/RiskAndFairness_oTree/Probability.html
@@ -13,7 +13,7 @@
     </p>
 
     <p>
-        In the left-side graph, your tokens are represented on the horizontal axis and
+        In the left-side graph, your tokens are represented on the horizontal axis and your
         Partner’s tokens on the vertical axis. Each of the two possible outcomes is represented
         by a dot or a bubble in this graph. You must decide what the probability of each outcome is
         in percentage (%) terms. The figure below shows a sample screenshot
@@ -46,7 +46,7 @@
     <p>
         Once you make your choice, press the submit decision button and continue to the next round.
         If you do not make a choice (do not move the slider to your preferred position, the computer will return an error.
-        Please think your decisions carefully. If at the end of the session, this Decision Round is selected to be paid.
+        Please think through your decisions carefully. If at the end of the session, this Decision Round is selected to be paid.
         The computer will randomly choose outcome A or B according with the probabilities you decided
         and will pay you and your partner accordingly.
     </p>
