--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -65,7 +65,7 @@
         </p>
 
         <p>
-            At the beginning of each decision screen, the square and the circle will appear by the (0, 0) combination. To make a choice drag the square or the circle to your chosen location. The other shape will follow. Only combinations on the purple line are feasible choices. The computer will not let you choose a combination outside the purple line. The same information displayed in the graph is shown in the table next to it. Each row represents one possible state and the tokens paid if such state occurs. You can try as many combinations as you want before you decide. Once you make your choice, press the submit decision button and continue to the next round. Please think your decisions carefully.
+            At the beginning of each decision screen, the square and the circle will appear by the (0, 0) combination. To make a choice drag the square or the circle to your chosen location. The other shape will follow. Only combinations on the purple line are feasible choices. The computer will not let you choose a combination outside the purple line. The same information displayed in the graph is shown in the table next to it. Each row represents one possible state and the tokens paid if such state occurs. You can try as many combinations as you want before you decide. Once you make your choice, press the submit decision button and continue to the next round. Please think through your decisions carefully.
         </p>
 
         <!-- Budget lines -->
