add instruction and change to nondecider

--- a/templates/RiskAndFairness_oTree/InitialInstructions.html
+++ b/templates/RiskAndFairness_oTree/InitialInstructions.html
@@ -61,7 +61,7 @@
     <p>
         This experiment will consist of a series of decision rounds of {{ Constants.number_types_of_tasks }}
         different types of tasks. Each kind of task will be explained later.
-        At the end of all decisions, your role (Decider or Partner) will be disclosed.
+        At the end of all decisions, your role (Decider or Non-Decided) will be disclosed.
         Then the computer will randomly select one choice made by the Decider and generate payoffs
         for both member of the pair based on that selected choice.
         The selected choice as well as the final payoffs it generates will be disclosed to both participants.
