commit before merge

--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -15,11 +15,11 @@
             {% elif mode == 'sec_2bl_2ch'%}
                 Instructions - Task S-2B-2C
             {% elif mode == 'sec_ownrisk' %}
-                Instructions - Task Sec-OwnRisk
+                Instructions - Task S-OwnRisk
             {% elif mode == 'sec_ownrisk_fixedother' %}
-                Instrucitons - Task Sec-OwnRisk-FixedOther
+                Instrucitons - Task S-OwnRisk-FixedOther
             {% elif mode == 'sec_otherrisk_ownfixed' %}
-                Instructions - Task Sec-OtherRisk-OwnFixed
+                Instructions - Task S-OtherRisk-OwnFixed
             {% endif %}
         </h2>
 
