--- a/templates/RiskAndFairness_oTree/Probability.html
+++ b/templates/RiskAndFairness_oTree/Probability.html
@@ -14,7 +14,7 @@
 
     <p>
         In the left-side graph, your tokens are represented on the horizontal axis and your
-        Partner’s tokens on the vertical axis. Each of the two possible outcomes is represented
+        partner’s tokens on the vertical axis. Each of the two possible outcomes is represented
         by a dot or a bubble in this graph. You must decide what the probability of each outcome is
         in percentage (%) terms. The figure below shows a sample screenshot
         of this task where the two fixed outcomes are
@@ -40,14 +40,14 @@
         You can try as many combinations as you want before you submit your decision.
         The same information of the graph is displayed in the table below the slider bar.
         Throughout this session, <b style="color: blue"> your tokens will be represented in blue </b> and
-        your <b style="color: orange"> Partner's tokens in orange</b>.
+        your <b style="color: orange"> partner's tokens in orange</b>.
     </p>
 
     <p>
         Once you make your choice, press the submit decision button and continue to the next round.
         If you do not make a choice (do not move the slider to your preferred position, the computer will return an error.
-        Please think through your decisions carefully. If at the end of the session, this Decision Round is selected to be paid.
-        The computer will randomly choose outcome A or B according with the probabilities you decided
+        Please think through your decisions carefully. If, at the end of the session, this Decision Round is selected to be paid,
+        the computer will randomly choose outcome A or B according with the probabilities you decided
         and will pay you and your partner accordingly.
     </p>
 
