--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -65,10 +65,10 @@
 
         {% elif mode == 'sec_ownrisk_fixedother' %}
             <p>
-            For this task, your partner's fortune is fixed, and you need to choose a lottery for you. In this example, states A and B both occur with 50% chance. Here, since both counterparts face reverse fates, Decider’s blue square and Partner’s orange circle are always in mirror positions on the graph. In the figure, for example, Decider’s square is at (State A = 50, B = 16.7) and Partner’s circle at (State A = 16.7, B = 50). This means, if State A happens, You receive 50 and Partner gets 16.7; and if State B happens you get 16.7 and your Partner gets 50. Also, beware that the probabilities of each State might vary across different decision rounds.
+            For this task, your partner's fortune is fixed, and you need to choose a lottery for you. In this example, states A and B both occur with 50% chance. Here, since both counterparts face different fortunes, your blue square and you partner’s orange circle will be in different positions. In the figure, for example, your square is at (State A = 35, B = 9) and your partner’s circle at (State A = 10, B = 20). This means, if State A happens, You receive 35 and Partner gets 10; and if State B happens you get 9 and your Partner gets 20. You can move your square but you cannot move your partner's circle. Also, beware that the probabilities of each State might vary across different decision rounds.
             </p>
             <p>
-            At the beginning of each decision screen, the square and the circle will appear at a random position. To make a choice drag the square and the circle to your chosen locations. The other shape will follow.
+            At the beginning of each decision screen, the square will appear at a random position. To make a choice drag the square and the circle to your chosen locations. The other shape will follow.
             </p>
         {% elif mode == 'sec_otherrisk_ownfixed' %}
 
@@ -77,10 +77,6 @@
             <p>
                 Only combinations on the lines are feasible choices. The computer will not let you choose a combination outside the corresponding lines. The same information displayed in the graph is shown in the table next to it. Each row represents one possible state and the tokens paid if such state occurs. You can try as many combinations as you want before you decide. Once you make your choice, press the Next button and continue to the next round. Beware that the probabilities of each State might vary across different decision rounds.
 
-        </p>
-
-        <p>
-            At the beginning of each decision screen, the square and the circle will appear by the (0, 0) combination. To make a choice drag the square or the circle to your chosen location. The other shape will follow. Only combinations on the purple line are feasible choices. The computer will not let you choose a combination outside the purple line. The same information displayed in the graph is shown in the table next to it. Each row represents one possible state and the tokens paid if such state occurs. You can try as many combinations as you want before you decide. Once you make your choice, press the submit decision button and continue to the next round. Please think through your decisions carefully.
         </p>
 
         <!-- Budget lines -->
