--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -318,7 +318,7 @@
 
 
     <div>
-        <button id="submit" class="btn btn-primary btn-large next-button">Submit Decision</button>
+        <button id="submit" class="btn btn-primary btn-large next-button" style="float: right;">Submit Decision</button>
     </div>
 
 
@@ -334,3 +334,5 @@
     </script>
 
 {% endblock %}
+
+cd RiskAndFairness_oTree/ && git add templates/RiskAndFairness_oTree/Graph.html && git commit -m "___________" && git pus
